auto-test/tests/chapter_18/invalid_types/invalid_member_operators/member_pointer_non_struct_pointer.c
struct a {
  int x;
  int y;
};

int main(void) {
  struct a my_struct = {1, 2};
  
  return my_struct->x;
}